--- a/BOZ_App/public/mix-manifest.json
+++ b/BOZ_App/public/mix-manifest.json
@@ -1,6 +1,7 @@
 {
     "/js/app.js": "/js/app.js",
     "/js/sb-admin-2.min.js": "/js/sb-admin-2.min.js",
+    "/js/admin_script.js": "/js/admin_script.js",
     "/css/sb-admin-2.min.css": "/css/sb-admin-2.min.css",
     "/css/app.css": "/css/app.css"
 }
