--- a/BOZ_App/public/mix-manifest.json
+++ b/BOZ_App/public/mix-manifest.json
@@ -1,9 +1,10 @@
 {
     "/js/app.js": "/js/app.js",
     "/js/sb-admin-2.min.js": "/js/sb-admin-2.min.js",
-    "/js/admin_script.js": "/js/admin_script.js",
+    "/js/media_library.js": "/js/media_library.js",
     "/js/homepage.js": "/js/homepage.js",
-    "/css/admin_style.css": "/css/admin_style.css",
+    "/js/context_hulp.js": "/js/context_hulp.js",
+    "/css/media_library.css": "/css/media_library.css",
     "/css/sb-admin-2.min.css": "/css/sb-admin-2.min.css",
     "/css/app.css": "/css/app.css"
 }
