Changed project content to rich text editor

--- a/BOZ_App/public/mix-manifest.json
+++ b/BOZ_App/public/mix-manifest.json
@@ -4,6 +4,7 @@
     "/js/media_library.js": "/js/media_library.js",
     "/js/homepage.js": "/js/homepage.js",
     "/js/context_hulp.js": "/js/context_hulp.js",
+    "/js/admin-script.js": "/js/admin-script.js",
     "/css/media_library.css": "/css/media_library.css",
     "/css/sb-admin-2.min.css": "/css/sb-admin-2.min.css",
     "/css/app.css": "/css/app.css"
