--- a/BOZ_App/package.json
+++ b/BOZ_App/package.json
@@ -21,7 +21,6 @@
         "tailwindcss": "^3.0.0"
     },
     "dependencies": {
-        "bootstrap": "^5.1.3",
-        "froala-editor": "^4.0.10"
+        "bootstrap": "^5.1.3"
     }
 }
