Added frontend media library

--- a/BOZ_App/public/mix-manifest.json
+++ b/BOZ_App/public/mix-manifest.json
@@ -1,10 +1,11 @@
 {
     "/js/app.js": "/js/app.js",
     "/js/sb-admin-2.min.js": "/js/sb-admin-2.min.js",
-    "/js/media_library.js": "/js/media_library.js",
     "/js/homepage.js": "/js/homepage.js",
     "/js/context_hulp.js": "/js/context_hulp.js",
     "/js/admin-script.js": "/js/admin-script.js",
+    "/js/cms_media_library.js": "/js/cms_media_library.js",
+    "/js/frontend_media_library.js": "/js/frontend_media_library.js",
     "/css/media_library.css": "/css/media_library.css",
     "/css/sb-admin-2.min.css": "/css/sb-admin-2.min.css",
     "/css/app.css": "/css/app.css"
