--- a/BOZ_App/.env.dusk
+++ b/BOZ_App/.env.dusk
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=boz_database_tests
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=boz-test
+DB_USERNAME=localUser
+DB_PASSWORD=Password123?
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
