Media from media library in editor

--- a/BOZ_App/public/mix-manifest.json
+++ b/BOZ_App/public/mix-manifest.json
@@ -7,6 +7,7 @@
     "/js/cms_media_library.js": "/js/cms_media_library.js",
     "/js/frontend_media_library.js": "/js/frontend_media_library.js",
     "/js/about-us.js": "/js/about-us.js",
+    "/js/froala-editor.js": "/js/froala-editor.js",
     "/css/media_library.css": "/css/media_library.css",
     "/css/sb-admin-2.min.css": "/css/sb-admin-2.min.css",
     "/css/app.css": "/css/app.css"
