--- a/BOZ_App/.env.dusk
+++ b/BOZ_App/.env.dusk
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=boz_database_tests
+DB_DATABASE=boz
 DB_USERNAME=root
 DB_PASSWORD=
 
