--- a/BOZ_App/.env.dusk
+++ b/BOZ_App/.env.dusk
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=boz
+DB_DATABASE=boz_database_tests
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -29,12 +29,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=0ac037ed212955
+MAIL_PASSWORD=b6781e697bd69a
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=q.tempelaars@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
